--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -257,7 +257,6 @@
         .projects {
             font-size: 12px;
             width: 100vw;
-            -webkit-overflow-scrolling: touch;
         }
 
         .projects-container {
@@ -326,6 +325,8 @@
         section {
             height: 100vh;
             width: 100vw;
+            overflow-y: scroll;
+            -webkit-overflow-scrolling: touch
         }
 
     }
